# dynamic-buffers

./: .gitignore  CMakeLists.txt  README.md  buffer_demo
src/: Demo.cpp  buffer.hpp  buffers.hpp
